--- a/edukit_bot/package.xml
+++ b/edukit_bot/package.xml
@@ -56,5 +56,7 @@
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>joy</exec_depend>
   <exec_depend>teleop_twist_joy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  
 
 </package>
